--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 [build]
 command = "bun run build"
 publish = "dist"
+functions = "netlify/functions"
 
 [build.environment]
 NODE_VERSION = "22"
@@ -35,4 +36,4 @@ command = "npm run dev"
 
 # Deploy preview context
 [context.deploy-preview]
-environment = { NODE_VERSION = "20" }
+environment = { NODE_VERSION = "22" }
