--- a/netlify.toml
+++ b/netlify.toml
@@ -37,3 +37,7 @@ command = "npm run dev"
 # Deploy preview context
 [context.deploy-preview]
 environment = { NODE_VERSION = "22" }
+
+# Scheduled function for monthly updates
+[functions."send-updates"]
+schedule = "0 15 1 * *"
