--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,9 @@ command = "bun run build"
 publish = "dist"
 functions = "netlify/functions"
 
+[dev]
+targetPort = 8080
+
 [build.environment]
 NODE_VERSION = "22"
 SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_URL,VITE_SUPABASE_ANON_KEY"
