--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "resend": "^6.6.0",
     "sonner": "^1.7.4",
     "speakeasy": "^2.0.0",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
