--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 # This file configures how Netlify builds and deploys your Fusion project
 
 [build]
-command = "bun run build"
+command = "npm run build"
 publish = "dist"
 functions = "netlify/functions"
 
